scripts/nullness/wpi/url18cf99526f_anasbenis_MiniProjetMay_tgz-pJ8-test_MainJ8.txt
../original/url18cf99526f_anasbenis_MiniProjetMay_tgz-pJ8-test_MainJ8/src/question2/impl2/PrintImpl2.java:32: error: (dereference.of.nullable) $$ 1 $$ out $$ ( 808, 811 ) $$ dereference of possibly-null reference out
						out.close();
						^
1 error
